added caddyshack quote

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1 style = "color:blue">This web page is blank</h1>
 		<h2 style = "color:purple">(Well, mostly blank, anyway).</h2>
 		<ul>
-			<li></li>
+			<li>"Me winning isn't, you do." --Ty Webb</li>
 			<li></li>
 		</ul>
 	</body>
