added quote from fletch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h2>(Well, mostly blank, anyway).</h2>
 		<ul>
 			<li>"Me winning isn't, you do." --Ty Webb</li>
-			<li></li>
+			<li>"It's all ball bearings these days." --Irwim M. Fletcher</li>
 		</ul>
 	</body>
 </html>
