added quote from Wendy's lady

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<ul>
 			<li>"Me winning isn't, you do." --Ty Webb</li>
 			<li>"It's all ball bearings these days." --Irwim M. Fletcher</li>
+			<li>"Where's the beef?" --Wendy's lady</li>
 		</ul>
 	</body>
 </html>
