--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<li>"Me winning isn't, you do." --Ty Webb</li>
 			<li>"It's all ball bearings these days." --Irwim M. Fletcher</li>
 			<li>"Where's the beef?" --Wendy's lady</li>
+			<li>"Show me the money" --Jerry McGuire</li>
+			<li>"There is no spoon" --Neo</li>
 			<li>"I have a need....a need for speed" --Maverick</li>
 			<li>"I can't be no....satisfaction" --Rolling Stones</li>
 			<li>"Life is a highway" --Some musician</li>
