--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<li>"It's all ball bearings these days." --Irwim M. Fletcher</li>
 			<li>"Where's the beef?" --Wendy's lady</li>
 			<li>"Show me the money" --Jerry McGuire</li>
+			<li>"I think, therfore I am" -</li>
 			<li>"There is no spoon" --Neo</li>
 			<li>"I have a need....a need for speed" --Maverick</li>
 			<li>"I can't be no....satisfaction" --Rolling Stones</li>
