added some musician quote

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<li>"Where's the beef?" --Wendy's lady</li>
 			<li>"I have a need....a need for speed" --Maverick</li>
 			<li>"I can't be no....satisfaction" --Rolling Stones</li>
+			<li>"Life is a highway" --Some musician</li>
 		</ul>
 	</body>
 </html>
