Def Leppard Quote

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<h1>This web page is blank</h1>
 		<h2>(Well, mostly blank, anyway).</h2>
 		<ul>
+			<li>"Pour some sugar on me" --Def Leppard</li>
 			<li>"Me winning isn't, you do." --Ty Webb</li>
 			<li>"It's all ball bearings these days." --Irwim M. Fletcher</li>
 			<li>"Where's the beef?" --Wendy's lady</li>
