updated second header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>A Page of Quotations</h1>
-		<h2>(Well, mostly blank, anyway).</h2>
+		<h2>...for your reading pleasure</h2>
 		<ul>
 			<li>"Pour some sugar on me" --Def Leppard</li>
 			<li>"Me winning isn't, you do." --Ty Webb</li>
