--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li>"I have a need....a need for speed" --Maverick</li>
 			<li>"I can't be no....satisfaction" --Rolling Stones</li>
 			<li>"Life is a highway" --Some musician</li>
+			<li>"Live long and prosper" --Spock</li>
 		</ul>
 	</body>
 </html>
