added yogi berra quote

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li>"I can't be no....satisfaction" --Rolling Stones</li>
 			<li>"Life is a highway" --Some musician</li>
 			<li>"Live long and prosper" --Spock</li>
+			<li>"It ain't over til it's over" --Yogi Berra</li>
 		</ul>
 	</body>
 </html>
