added sheryl crow quote

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li>"I can't be no....satisfaction" --Rolling Stones</li>
 			<li>"Life is a highway" --Some musician</li>
 			<li>"Live long and prosper" --Spock</li>
+			<li>"Every day is a winding road" --Sheryl Crow</li>
 		</ul>
 	</body>
 </html>
